[package]
name = "hello-rocket"
version = "0.1.0"
authors = ["mthorning <matthewthorning@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
rocket_codegen = "0.4.2"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["serve", "json", "diesel_postgres_pool"]
